--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,3 @@
 body {
   height: 100vh;
 }
-
-.wip-wrapper {
-  display: flex;
-  width: 100%;
-  height: fit-content;
-  padding: .5em 1em;
-  background-color: rgba(255, 0, 0, 0.438);
-  color: #F5F5F5;
-  border: 3px solid rgba(255, 100, 100, 0.438);
-  font-weight: 100;
-}
